force-app/main/default/objects/ccrz__E_MenuItemI18N__c/ccrz__E_MenuItemI18N__c.object-meta.xml
<CustomObject>
    <description>Locale-specific version of menu item, used for localizing the display name of menu item.</description>
    <label>CC Menu Item I18N</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Menu Item I18N AutoNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Menu Item I18N</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>