force-app/main/default/objects/ccrz__E_MenuItemI18N__c/fields/ccrz__DisplayName__c.field-meta.xml
<CustomField>
    <fullName>ccrz__DisplayName__c</fullName>
    <description>Display Name in the language referenced by the locale.</description>
    <label>Display Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>