force-app/main/default/objects/ccrz__E_MenuItemI18N__c/fields/ccrz__Language__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Language__c</fullName>
    <description>Locale/Language that is being defined by this entry.</description>
    <label>Language</label>
    <length>25</length>
    <type>Text</type>
</CustomField>