force-app/main/default/objects/ccrz__E_MenuItemI18N__c/fields/ccrz__MenuItem__c.field-meta.xml
<CustomField>
    <fullName>ccrz__MenuItem__c</fullName>
    <description>Reference to the CC Menu Item record being localized.</description>
    <label>Menu Item</label>
    <referenceTo>ccrz__E_MenuItem__c</referenceTo>
    <relationshipLabel>CC Menu Item I18N</relationshipLabel>
    <relationshipName>MenuItem_I18N</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>